# arx-dist

./: README.md  arx  arxos-askpass  arxos-run-tool  badpass.txt  install.sh  tools.db  weapons-menu.sh
arx-core/: Cargo.toml
arx-core/src/: main.rs
